# suffix-tree

./: .gitignore  CMakeLists.txt  README.md  build.py  pyproject.toml  test.py
backend/: corpus_manager.py  main.py  text_utils.py
core/: CMakeLists.txt
core/bindings/: bindings.cpp
core/include/: corpus_tree.hpp  matching_stats.hpp  naive_search.hpp  suffix_tree.hpp
core/src/: corpus_tree.cpp  matching_stats.cpp  naive_search.cpp  suffix_tree.cpp
tests/cpp/: CMakeLists.txt  test_main.cpp
tests/python/: test_api.py  test_bridge.py
